# grpc-rust-node

client/: index.js  package-lock.json  package.json
proto/: chat.proto
server/: Cargo.toml  build.rs
server/src/: chat.rs  chat_grpc.rs  server.rs
